@@ -1,6 +1,8 @@
 Broker:
 - Fix excessive CPU use on non-Linux systems when the open file limit is set
   high. Closes #1947.
+- Fix LWT not being sent on client takeover when the existing session wasn't
+  being continued. Closes #1946.
 
 Apps:
 - Fix `mosquitto_passwd -b` using username as password (not if `-c` is also
